--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -1,7 +1,10 @@
 /* FONTS */
-@import url('https://fonts.googleapis.com/css?family=Oswald|Open+Sans|Playfair+Display');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Open+Sans|Playfair+Display|Fugaz+One');
 $site-header-font: "Oswald", serif;
 $site-paragraph-font: "Open Sans", sans-serif;
+$playfair-display: "Playfair Display", sans-serif;
+$fugaz-one: "Fugaz One", serif;
+
 /* COLORS */
 $site-gray: #373737;
 $site-white: #ffffff;
@@ -15,14 +18,8 @@ $navbar-background: $site-background;
 $navbar-active-link: $site-red;
 $navbar-unactive-link: $site-paragraph;
 
-$section-header: #373737;
-$solid-link: #373737;
-
-$story-title: #373737;
-$author: #373737;
-
-$card-header-bg: #373737;
-$card-title-color: #ffffff;
+$card-header-bg: $site-gray;
+$card-title-color: $site-white;
 
 
 /* MASTHEAD/FOOTER BACKGROUND IMAGE */
@@ -41,41 +38,33 @@ $grid-breakpoints: (
   // Extra large screen / wide desktop
   xl: 1280px
 );
+
 /* CUSTOM BOOTSTRAP CONTAINER */
-.container {
-  padding-right: 10px;
-  padding-left: 10px;
+.large-container {
+  padding-right: 15px;
+  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
 @media (min-width: 768px) {
-  .container {
-    max-width: calc(100vw - 50px);
+  .large-container {
+    max-width: calc(100vw - 100px);
   }
 }
 @media (min-width: 992px) {
-  .container {
-    max-width: calc(100vw - 80px);
+  .large-container {
+    max-width: calc(100vw - 160px);
   }
 }
 @media (min-width: 1280px) {
-  .container {
-    max-width: calc(100vw - 140px);
+  .large-container {
+    max-width: calc(100vw - 200px);
   }
 }
 
-
-/* MIXINS */
-$breakpoints: (            //   Bootstrap equivalents
-    "phone":        576px, //           sm
-    "tablet":       768px, //           md
-    "desktop":      992px, //           lg
-    "desktop-wide": 1250px //           xl
-);
-
 @mixin mq($width, $type: min) {
-    @if map_has_key($breakpoints, $width) {
-        $width: map_get($breakpoints, $width);
+    @if map_has_key($grid-breakpoints, $width) {
+        $width: map_get($grid-breakpoints, $width);
         @if $type == max {
             $width: $width - 1px;
         }
@@ -91,5 +80,13 @@ $breakpoints: (            //   Bootstrap equivalents
     } @else {
         @warn 'There is no item "#{$name}" in this list; choose one of: #{$z-indexes}';
         @return null;
+    }
+}
+
+@function set-text-color($color) {
+    @if (lightness($color) > 50) {
+        @return $site-gray;
+    } @else {
+        @return $site-white;
     }
 }
