--- a/home/templates/home/includes/navbar.html
+++ b/home/templates/home/includes/navbar.html
@@ -12,7 +12,7 @@
             Montgomery Blair High School's Online Student Newspaper | <span id="date"></span>
         </h6>
     </header>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg pb-0">
         {# logo for mobile #}
         <a class="navbar-brand logo mx-auto py-3 d-lg-none" href="#"> {% include "home/includes/_logo-svg.html" %} </a>
 
