--- a/staff/templates/staff/content/list.html
+++ b/staff/templates/staff/content/list.html
@@ -18,10 +18,10 @@
         <a class="btn btn-primary btn btn-block my-3" href="{% url "staff:content:create:image" %}">Create Image <i class="fas fa-camera"></i></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a class="btn btn-primary btn btn-block my-3" href="{% url "staff:content:create:video" %}">Create Video <i class="fas fa-camera"></i></a>
+        <a class="btn btn-primary btn btn-block my-3" href="{% url "staff:content:create:video" %}">Create Video <i class="fas fa-video"></i></a>
     </div>
     <div class="col-lg-3 col-sm-6 col-xs-12">
-        <a class="btn btn-primary btn btn-block my-3" href="{% url "staff:content:create:audio" %}">Create Audio <i class="fas fa-camera"></i></a>
+        <a class="btn btn-primary btn btn-block my-3" href="{% url "staff:content:create:audio" %}">Create Audio <i class="fas fa-microphone"></i></a>
     </div>
 {# STUB_POLL #}
 </div>
@@ -141,5 +141,5 @@ function doApi(url, verb) {
     </table>
 </div>
 
-{% include "staff/utils/paginator.html" %}
+{% include "home/utils/paginator.html" %}
 {% endblock %}
