--- a/home/templates/home/content/video.html
+++ b/home/templates/home/content/video.html
@@ -1,6 +1,6 @@
 {% with video=content %}
     <video controls style="max-width: 80%; height: auto;" class="mx-auto d-block">
-        <source src="{{ video.source.url }}" type="video/mp4">
+        <source src="{{ video.url }}" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 {% endwith %}
