--- a/staff/static/staff/staff.scss
+++ b/staff/static/staff/staff.scss
@@ -3,7 +3,12 @@
 }
 
 .asteriskField {
-  display: none;
+  color: red;
+  font-weight: bold;
+
+  &::before {
+      content: " ";
+  }
 }
 
 body {
