--- a/staff/templates/staff/index.html
+++ b/staff/templates/staff/index.html
@@ -11,14 +11,14 @@
     <a class="btn btn-info btn-lg btn-block my-3" href="{% url "staff:content:list" %}">Content <i class="fas fa-list-ul"></i></a>
 
     <h3>Personal</h3>
-{##}
-{#    <div class="row">#}
-{#        {% if user|can:"core.edit_profile" %}#}
-{#        <div class="col-sm-6 col-xs-12">#}
-{#            <a class="btn btn-info btn-lg btn-block my-3" href="{% url "staff:users:self_manage" request.user.pk %}">Edit Profile <i class="fas fa-user"></i></a>#}
-{#        </div>#}
-{#        {% endif %}#}
-{#    </div>#}
+
+    <div class="row">
+        {% if user|can:"core.edit_profile" %}
+        <div class="col-sm-6 col-xs-12">
+            <a class="btn btn-info btn-lg btn-block my-3" href="{% url "staff:users:self_manage" %}">Edit Profile <i class="fas fa-user"></i></a>
+        </div>
+        {% endif %}
+    </div>
 
     <h3>Danger Zone</h3>
     {% if user|can:"auth.manage_users" %}
