rudimentary editor for galleries

--- a/staff/templates/staff/base.html
+++ b/staff/templates/staff/base.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         {% include "staff/includes/bootstrap.html" %}
-        <link type="text/css" rel="stylesheet" href="{% static 'staff/staff.scss'|compile %}">
+        <link type="text/css" rel="stylesheet" href="{% static 'staff/styles/staff.scss'|compile %}">
         <title>{% block title %}Staff Site{% endblock %}</title>
         {% block head %}{% endblock %}
     </head>
