--- a/staff/templates/staff/login.html
+++ b/staff/templates/staff/login.html
@@ -5,7 +5,7 @@
     <head>
         <title>Staff Login</title>
         {% include "staff/includes/bootstrap.html" %}
-        <link rel="stylesheet" href="{% static "staff/_login.scss"|compile %}"/>
+        <link rel="stylesheet" href="{% static "staff/styles/_login.scss"|compile %}"/>
     </head>
     <body>
         <div>
