--- a/staff/templates/staff/editor.html
+++ b/staff/templates/staff/editor.html
@@ -19,4 +19,7 @@
 
     <button type="submit" class="btn btn-success btn-block">Save <i class="fas fa-save"></i></button>
   </form>
+
+  {% block subeditor %}
+  {% endblock %}
 {% endblock %}
