functioning embedding editor -- so exciting

--- a/home/templates/home/content/image.html
+++ b/home/templates/home/content/image.html
@@ -1,3 +1,3 @@
 {% with image=content %}
-    <img src="{{ image.url }}" style="max-width: 80%; height: auto;" class="mx-auto d-block mb-2">
+  <img src="{{ image.source.url }}" style="max-width: 80%; height: auto;" class="mx-auto d-block mb-2">
 {% endwith %}
