--- a/staff/templates/staff/includes/richtext_embed_modal.html
+++ b/staff/templates/staff/includes/richtext_embed_modal.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}
 
-<div class="modal fade" id="embed-modal" tabindex="-1" role="dialog" aria-labelledby="embedModalLabel" aria-hidden="true">
+<div class="modal fade" id="embed-modal" role="dialog" aria-labelledby="embedModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -14,6 +14,8 @@
           <div class="form-inline">
             {% crispy form form.helper %}
           </div>
+
+          {{ form.media }}
         </form>
       </div>
       <div class="modal-footer">
