--- a/home/static/home/styles/imports/_footer-styles.scss
+++ b/home/static/home/styles/imports/_footer-styles.scss
@@ -16,7 +16,7 @@
         margin-bottom: 40px;
         text-align: center;
         display: block;
-        @include mq('desktop') {
+        @include mq(lg) {
             display: inline-block;
             width: 40%;
             text-align: left;
@@ -34,7 +34,7 @@
         margin-bottom: 40px;
         text-align: center;
         display: block;
-        @include mq('desktop') {
+        @include mq(lg) {
             display: inline-block;
             width: 35%;
             text-align: left;
@@ -73,7 +73,7 @@
         margin-bottom: 40px;
         text-align: center;
         display: block;
-        @include mq('desktop') {
+        @include mq(lg) {
             display: inline-block;
             width: 20%;
             text-align: left;
