--- a/home/static/home/styles/styles.scss
+++ b/home/static/home/styles/styles.scss
@@ -28,11 +28,57 @@ html {
     }
 }
 
-.section-header {
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+.section-recently-0 {
+    .recently {
+        
+    }
+    .title a {
+        @extend .solid-link;
+    }
+    .in-section {
+        font-size: 0.85rem;
+        font-weight: bold;
+        color: lighten($site-gray, 20);
+        a { color: $site-red; }
+    }
 }
 
-.section-featured {
+.section-featured-0 {
+    position: relative;
+    overflow: hidden;
+
+    &:before {
+        display: block;
+        content: "";
+        width: 100%;
+        padding-top: 75%;
+        @media (min-width: 992px) {
+            padding-top: 56.25%;
+        }
+    }
+
+    .featured-img {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .content {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        .feature-title a, .lead, a {
+            display: inline-block;
+            font-family: $fugaz-one;
+            color: $site-white;
+        }
+    }
+}
+
+.section-featured-1 {
     position: relative;
     overflow: hidden;
 
@@ -47,7 +93,6 @@ html {
     }
 
     .featured-img {
-        object-fit: cover;
         position: absolute;
         top: 0;
     }
@@ -59,33 +104,29 @@ html {
         left: 0;
         right: 0;
 
-        a { color: $site-white; }
-
-        .feature-title a, .lead {
-            background-color: $site-white;
-        }
-
         .feature-title a, .lead, a {
             display: inline-block;
             font-family: $fugaz-one;
             color: $site-gray;
-            text-shadow: 0px 3px 1px darkorange;
         }
     }
 }
 
-.section-card {
+.section-card-1 {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 
-    transition: transform 0.5s ease .3ms;
-    &:hover {
-        transform: scale(1.01562); // 1/64
+    .img-wrapper {
+        overflow: hidden;
     }
 
     .card-img-top {
         position: relative;
         float: left;
-        width: 100%;
+        transition: all 0.5s ease 10ms;
+
+        &:hover {
+            transform: scale(1.2)
+        }
 
         &:after {
             padding-top: 56.25%;
@@ -93,16 +134,33 @@ html {
             content: "";
         }
     }
-    .card-img-top .img-wrapper {
-        position: absolute;
-        top: 0;
-        left: 0;
+
+    .in-section {
+        position: relative;
+        left: 50%;
+
+        a {
+            position: absolute;
+            transform: translate(-50%, -50%);
+
+            padding: 5px 12px;
+            color: $site-white;
+            background: $site-red;
+            text-decoration: none;
+            transition: all 0.2s ease;
+
+            &:hover {
+                background: lighten($site-red, 5);
+            }
+        }
     }
+
     .card-body {
-        p { font-size: 0.75rem; }
+        .story-created { font-size: 0.75rem; }
         h4 a { font-family: $fugaz-one; }
     }
 }
+
 
 /* Social Media Sidebar */
 .social-media-sidebar {
