--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,60 +7,101 @@
 {% block content %}
     {% include "home/includes/index-sm-sidebar.html" %}
             {% for section in section_roots %}
-                <div id="{{ section.title }}">
-                    <h2 class="container rounded display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h2>
+                {% if section.name == "news" %}
 
-                    <div class="section-featured mb-4 my-0 py-0">
-                        {% for story in section.all_stories.all|slice:"1" %}
-                            <img class="featured-img img-fluid" src="{% if forloop.parentloop.counter|divisibleby:"3"  %}
-                                    {% static "home/images/sunset.jpg" %}
-                                 {% elif forloop.parentloop.counter|divisibleby:"2"  %}
-                                    {% static "home/images/iceberg.jpg" %}
-                                 {% else %}
-                                    {% static "home/images/beach.jpg" %}
-                                 {% endif %}" alt="image not found"/>
+                <div id="{{ section.title }}" class="large-container">
+                    <div class="row">
+                        <div class="col-md-3 section-recently-0">
+                            <h1 class="recently">Recently...</h1>
+                            <hr>
+                            {% for story in section.all_stories.all|slice:"7"  %}
+                                <div>
+                                    <h5 class="title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h4>
+                                    <p class="in-section"><a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }}</a> | {{ story.created }}</p>
+                                    <hr>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <div class="col-md-9">
+                            {% for story in section.all_stories.all|slice:"7"  %}
+                            {% if forloop.first %}
+                                <div class="section-featured-0">
+                                    <img class="featured-img" src="{% static "home/images/bird.jpg" %}" alt="img not found">
+                                    <div class="content">
+                                        <h2 class="text-center mt-4 feature-title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h2>
+                                        <h6 class="text-center py-2">{% include "home/utils/authors.html" with content=story %} | {{ story.created }}</h6>
+                                    </div>
+                                </div>
+                            {% else %}
 
-                            <div class="content container text-center">
-                                <h2 class="display-4 mt-5 feature-title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h4>
-                                <h6 class="lead py-1">{% include "home/utils/authors.html" with content=story %} | {{ story.created }}</h6>
-                            </div>
-                        {% endfor %}
+                            {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+
+                {% elif section.name == "lifestyle" %}
+                    <div id="{{ section.title }}">
+                        <h2 class="container display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h2>
+
+                        <div class="section-featured-1 mb-4 my-0 py-0">
+                            {% for story in section.all_stories.all|slice:"1" %}
+                                <img class="featured-img img-fluid" src="{% static "home/images/iceberg.jpg" %}" alt="image not found"/>
+
+                                <div class="content container text-center">
+                                    <h2 class="display-4 mt-5 feature-title"><a href="{% url "home:view_content" story.pk %}">{{ story.title|safe }}</a></h4>
+                                    <h6 class="lead py-1">{% include "home/utils/authors.html" with content=story %} | {{ story.created }}</h6>
+                                </div>
+                            {% endfor %}
+                        </div>
+
+                        <div class="container-fluid"><div class="row">
+                            {% for story in section.all_stories.all|slice:"1:7" %}
+                                {% if not forloop.counter|divisibleby:"2" %}<div class="col-md-4">{% endif %}
+
+                                        <div class="card align-middle rounded-0 mb-4 section-card-1">
+                                            <div class="img-wrapper">
+                                                <img class="card-img-top mx-auto rounded-0 d--block" src="{% if forloop.counter|divisibleby:"4"  %}
+                                                    {% static "home/images/img_4.jpg" %}
+                                                 {% elif forloop.counter|divisibleby:"3" %}
+                                                    {% static "home/images/bird.jpg" %}
+                                                 {% elif forloop.counter|divisibleby:"2"  %}
+                                                    {% static "home/images/chair.jpg" %}
+                                                 {% else %}
+                                                    {% static "home/images/grass.jpg" %}
+                                                 {% endif %}"  alt="featurette-img"/>
+                                             </div>
+                                             <div class="in-section">
+                                                 <a href="{% url "home:view_section" story.section.name %}" class="solid-link">{{ story.section.title }} </a>
+                                             </div>
+                                             <div class="card-body">
+                                                 <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" with content=story %}</h6>
+                                                 <p class="story-created">{{ story.created }}</p>
+                                                 <h4 class="card-title"><a href="{% url "home:view_content" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
+                                                 <p>
+                                                   {{ story.lead|safe }}
+                                                 </p>
+                                             </div>
+                                        </div>
+                                {% if forloop.counter|divisibleby:"2" %}</div>{% endif %}
+                            {% endfor %}
+                        </div></div>
+                        
+                        <hr class="mt-3 mb-5" />
                     </div>
 
-                    <div class="container"><div class="row">
-                        {% for story in section.all_stories.all|slice:"1:5" %}
-                            {% if not forloop.counter|divisibleby:"2" %}<div class="col-md-6">{% endif %}
+                {% elif section.name == "lifestyle" %}
+                    <h2 class="container display-4 mb-4 py-2 text-center text-uppercase section-header"><a href="{% url "home:view_section" section.name %}">{{ section.title }}</a></h2>
 
-                                    <div class="card align-middle rounded-0 mb-4 section-card">
-                                        <div class="img-wrapper"><img class="card-img-top mx-auto rounded-0 d-inline-block" src="{% if forloop.counter|divisibleby:"4"  %}
-                                                {% static "home/images/img_4.jpg" %}
-                                             {% elif forloop.counter|divisibleby:"3" %}
-                                                {% static "home/images/bird.jpg" %}
-                                             {% elif forloop.counter|divisibleby:"2"  %}
-                                                {% static "home/images/chair.jpg" %}
-                                             {% else %}
-                                                {% static "home/images/grass.jpg" %}
-                                             {% endif %}"  alt="featurette-img"/></div>
-                                        <div class="card-body">
-                                            <h6 class="authors font-weight-bold">{% include "home/utils/authors.html" with content=story %}</h6>
-                                            <p>{{ story.created }}</p>
-                                            <h4 class="card-title"><a href="{% url "home:view_content" story.pk %}" class="solid-link">{{ story.title|safe }}</a></h4>
-                                        </div>
-                                    </div>
+                    <div class="row">
+                    {% for story in section.all_stories.all|slice:"5" %}
+                    
+                        
+                    
+                    {% endfor %}
+                    </div>
+                {% endif %}
 
-                            {% if forloop.counter|divisibleby:"2" %}</div>{% endif %}
-                        {% endfor %}
-                    </div></div>
-                    <hr class="mt-3 mb-5" />
-                </div>
             {% endfor %}
+            <script src="{% static "home/scripts/index.js" %}"></script>
 {% endblock %}
-
-{% comment %} <img class="img-fluid mx-auto"
-src="{% if forloop.counter|divisibleby:"3" %}
-        {% static "home/images/img_2.jpg" %}
-    {% elif forloop.counter|divisibleby:"2"  %}
-        {% static "home/images/work_5.jpg" %}
-    {% else %}
-        {% static "home/images/img_4.jpg" %}
-    {% endif %}"  alt="featurette-img"> {% endcomment %}
